@@ -1,5 +1,9 @@
 2011-09-20  Julien Danjou  <julien@danjou.info>
 
+	* auth-source.el (auth-source-netrc-create): Use default value for
+	password if specified. Evaluate default.
+	(auth-source-plstore-create): Ditto.
+
 	* password-cache.el (password-cache-remove): Remove entries even if the
 	value is nil, so that password with a nil value (negative caching) is
 	possible to invalidate.
